--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tyler Mitchell CEAMLS SAIRI Website Summer 2024 
-logo: assets/img/3-012A4913 (1) (1).jpg
+logo: MYA03793.jpg
 description: Hello there! My name is Tyler Mitchell and this is my CEAMLS SAIRI Website for Summer 2024.
 show_downloads: true
 google_analytics:
